--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>WebWinders</title>
+		<title>Sherlock | Tribute by Dani Vijay</title>
 		<style>
 			.container {
 			  background: white;
